--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -1,4 +1,107 @@
-<div class="row mt-3 align-items-center" style="height: 80vh;">
-    <app-page-spinner *ngIf="loading"></app-page-spinner>
+<div class="container-fluid" style="margin:0!important; padding-top: 20px;">
+  <app-page-spinner *ngIf="loading"></app-page-spinner>
+  <div class="col-12" *ngIf="dataJson" style="margin-bottom : 30px !important;">
+    <mat-card class="flatCard">
+      <mat-card-header style="width: 100%;">
+        <div class="row justify-content-center" style="width: 100%;">
+          <div class="col-12" align="center">
+            <mat-card-title class="listTileTitle">
+              <mat-icon style="size: 30px;">library_books</mat-icon>
+            </mat-card-title>
+          </div>
+        </div>
+        <div class="row justify-content-center" style="width: 100%;">
+          <div class="col-12" align="center">
+            <mat-card-title class="listTileTitle">
+              <h1>Gestione Libri</h1>
+            </mat-card-title>
+          </div>
+
+        </div>
+      </mat-card-header>
+
+      <mat-card-content>
+        <div class="row justify-content-center">
+          <mat-form-field style="width: 80%;" align="center" appearance="standard">
+            <mat-label>Filter</mat-label>
+            <input matInput (keyup)="applyFilter($event)" placeholder="Filter" #input>
+          </mat-form-field>
+
+          <div class="mat-elevation-z8" style="width: 90%;">
+            <table mat-table [dataSource]="dataSource" matSort>
+              <!-- Name Column -->
+              <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Nome Libro </th>
+                <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+              </ng-container>
+              <ng-container matColumnDef="code">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Codice Libro </th>
+                <td mat-cell *matCellDef="let row"> {{row.code}} </td>
+              </ng-container>
+              <!-- ROlE Column -->
+              <ng-container matColumnDef="retry">
+                <th mat-header-cell *matHeaderCellDef> Inizio Prestito </th>
+                <td mat-cell *matCellDef="let row"> {{row.retry}} </td>
+              </ng-container>
+              <!-- Group Column -->
+              <ng-container matColumnDef="end">
+                <th mat-header-cell *matHeaderCellDef> Fine Prestito </th>
+                <td mat-cell *matCellDef="let row"> {{row.end}} </td>
+              </ng-container>
+              <ng-container matColumnDef="check">
+                <th mat-header-cell *matHeaderCellDef> Progetto </th>
+                <td mat-cell *matCellDef="let row">
+                  <mat-icon *ngIf="row.check" style="color: green">done</mat-icon>
+                  <mat-icon *ngIf="!row.check" style="color: crimson">clear</mat-icon>
+                </td>
+              </ng-container>
+              <ng-container matColumnDef="prog">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Nome Progetto </th>
+                <td mat-cell *matCellDef="let row"> {{row.check ? row.prog : ""}} </td>
+              </ng-container>
+              <ng-container matColumnDef="username">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Utente Prestito </th>
+                <td mat-cell *matCellDef="let row"> {{row.username}} </td>
+              </ng-container>
+              <ng-container matColumnDef="action">
+                <th mat-header-cell *matHeaderCellDef style="color: black;">Azione</th>
+                <td mat-cell *matCellDef="let element">
+                  <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+                    <mat-icon>more_vert</mat-icon>
+                  </button>
+                  <mat-menu #menu="matMenu">
+                    <button mat-menu-item (click)="openDialog('Elimina',element)">
+                      <mat-icon>delete</mat-icon>
+                      <span>Elimina</span>
+                    </button>
+                    <button mat-menu-item (click)="openDialog('Modifica',element)">
+                      <mat-icon>description</mat-icon>
+                      <span>Modifica Informazioni</span>
+                    </button>
+
+                  </mat-menu>
+                </td>
+              </ng-container>
+
+              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+              <!-- Row shown when there is no matching data. -->
+              <tr class="mat-row" *matNoDataRow>
+                <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+              </tr>
+            </table>
+
+            <mat-paginator [pageSizeOptions]="[5, 10, 20]" aria-label="Select page of periodic elements">
+            </mat-paginator>
+          </div>
+
+        </div>
+      </mat-card-content>
+    </mat-card>
+
+
+  </div>
+
 
 </div>
